# python-field-notes

./: .editorconfig  README.md  pyproject.toml
coursera/course1-diving-in-python/week2/example1/: requirements.txt
docs/: index.md  learning-path.md
examples/async-and-io/learning-asyncio/: README.md  requirements.txt
examples/async-and-io/learning-asyncio/aiohttp/: hello_world.py  index.html  news_scrapper.py
examples/async-and-io/learning-asyncio/asyncio/: 03-01-hello-world.py  03-02-hello-world.py  03-03-executor.py  03-04-coroutines.py  03-05-stop-iteration.py  03-06-throw.py  03-07-cancellation.py  03-08-not-cancelled.py  03-09-event-loop.py  03-16-future.py  03-17-set-result-on-task.py  03-18-ensure-future.py  03-19-listify.py  03-20-async-context-manager.py  03-21-contextmanager.py  03-23-executor.py  03-25-iterator.py  03-26-generator.py  03-27-comprehension.py  03-28-comprehension.py  03-30-app-life-cycle.py  03-31-task-inside-cancellation.py  03-32-all-task-will-complete.py  03-33-signals.py  03-34-signal-handlers.py  03-35-signals-asyncio-run.py  (+7 more)
examples/databases/learning-sqlalchemy/: .gitignore  README.md  association_proxy.py  chaining.py  db.py  deletes.py  engine_examples.py  exceptions.py  grouping.py  hybrid_attrs.py  inserts.py  joins.py  orm.py  orm_reflection.py  raw.py  reflection.py  seed.py  selects.py  test_orm.py  transactions.py  updates.py
exercises/books/python-workout/: pyproject.toml
exercises/testing/learning-pytest/: .gitignore  requirements.txt
exercises/testing/learning-pytest/ch15-writing-plugin/pytest_skip_slow/: LICENSE  README.md  pyproject.toml  pytest_skip_slow.py  tox.ini
exercises/testing/learning-pytest/ch15-writing-plugin/pytest_skip_slow/tests/: conftest.py  test_plugin.py
notes/tutorial/: 10_testing.ipynb  11_unicode.ipynb  14_objects_serialization.ipynb
(+95 files in other folders)
