[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest-skip-slow" # <- using naming convention pytest follows, with the `pytest-` prefix
authors = [{name = "Andrey Krisanov", email = "develop4net@gmail.com"}]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Pytest", # <- !!!
]
dependencies = ["pytest>=6.2.0"]
requires-python = ">=3.7"
license = {file = "LICENSE"}
dynamic = ["version", "description"]

[project.urls]
Home = "https://pytest.org"

[project.entry-points.pytest11]
# required by pytest
# https://docs.pytest.org/en/latest/how-to/writing_plugins.html#making-your-plugin-installable-by-others
# format: name_of_plugin = "plugin_module"
skip_slow = "pytest_skip_slow"

[project.optional-dependencies]
test = ["tox"] # <- tells Flit to install tox when we install our project in editable mode

[tool.flit.module]
name = "pytest_skip_slow" # <- the actual name of the module
